@@ -104,27 +104,27 @@ extern "C"
                     long long old=(nh::server::stat::hour_download(0));
                     for(unsigned long i=0;i<4;i++)
                     {
-                        diag+="<line x1=\"0\" x2=\"100%\" y1=\""+nh::data::superstring::from_int((i+1)*20)+"%\" y2=\""+nh::data::superstring::from_int((i+1)*20)+"%\" style=\"stroke:rgb(50,50,50);stroke-width:0.5px\" />";
-                        diag+="<text x=\"90%\"  y=\""+nh::data::superstring::from_int((i+1)*20)+"%\"> "+nh::data::superstring::from_int(mxt/(i+2)/1024)+"kb</text>";
+                        diag+="<line x1=\"0\" x2=\"100%\" y1=\""+nh::data::superstring::str_from_int((i+1)*20)+"%\" y2=\""+nh::data::superstring::str_from_int((i+1)*20)+"%\" style=\"stroke:rgb(50,50,50);stroke-width:0.5px\" />";
+                        diag+="<text x=\"90%\"  y=\""+nh::data::superstring::str_from_int((i+1)*20)+"%\"> "+nh::data::superstring::str_from_int(mxt/(i+2)/1024)+"kb</text>";
                     }
                     for(unsigned long i=1;i<nh::server::stat::hourly_length();i++)
                     {
-                        diag+="<line x1=\""+content.from_int(((i-1)*100)/nh::server::stat::hourly_length())+\
-                            "%\" y1=\""+content.from_int(100-((olt*100)/mxt))+\
-                            "%\" x2=\""+content.from_int(((i)*100)/nh::server::stat::hourly_length())+\
-                            "%\" y2=\""+content.from_int(100-(((nh::server::stat::hour_upload(i)+nh::server::stat::hour_download(i))*100)/mxt))+\
+                        diag+="<line x1=\""+content.str_from_int(((i-1)*100)/nh::server::stat::hourly_length())+\
+                            "%\" y1=\""+content.str_from_int(100-((olt*100)/mxt))+\
+                            "%\" x2=\""+content.str_from_int(((i)*100)/nh::server::stat::hourly_length())+\
+                            "%\" y2=\""+content.str_from_int(100-(((nh::server::stat::hour_upload(i)+nh::server::stat::hour_download(i))*100)/mxt))+\
                             "%\" style=\"stroke:rgb(220,80,0);stroke-width:1\" />";
 
-                        diag+="<line x1=\""+content.from_int(((i-1)*100)/nh::server::stat::hourly_length())+\
-                            "%\" y1=\""+content.from_int(100-((olu*100)/mxt))+\
-                            "%\" x2=\""+content.from_int(((i)*100)/nh::server::stat::hourly_length())+\
-                            "%\" y2=\""+content.from_int(100-(((nh::server::stat::hour_upload(i))*100)/mxt))+\
+                        diag+="<line x1=\""+content.str_from_int(((i-1)*100)/nh::server::stat::hourly_length())+\
+                            "%\" y1=\""+content.str_from_int(100-((olu*100)/mxt))+\
+                            "%\" x2=\""+content.str_from_int(((i)*100)/nh::server::stat::hourly_length())+\
+                            "%\" y2=\""+content.str_from_int(100-(((nh::server::stat::hour_upload(i))*100)/mxt))+\
                             "%\" style=\"stroke:rgb(17,187,17);stroke-width:1\" />";
 
-                        diag+="<line x1=\""+content.from_int(((i-1)*100)/nh::server::stat::hourly_length())+\
-                            "%\" y1=\""+content.from_int(100-((old*100)/mxt))+\
-                            "%\" x2=\""+content.from_int(((i)*100)/nh::server::stat::hourly_length())+\
-                            "%\" y2=\""+content.from_int(100-(((nh::server::stat::hour_download(i))*100)/mxt))+\
+                        diag+="<line x1=\""+content.str_from_int(((i-1)*100)/nh::server::stat::hourly_length())+\
+                            "%\" y1=\""+content.str_from_int(100-((old*100)/mxt))+\
+                            "%\" x2=\""+content.str_from_int(((i)*100)/nh::server::stat::hourly_length())+\
+                            "%\" y2=\""+content.str_from_int(100-(((nh::server::stat::hour_download(i))*100)/mxt))+\
                             "%\" style=\"stroke:rgb(187,17,17);stroke-width:1\" />";
 
                         olt=(nh::server::stat::hour_upload(i)+nh::server::stat::hour_download(i));
@@ -135,22 +135,22 @@ extern "C"
 
                     content.change("[[transfer_usage]]","<br/><b>Transfer used:</b> "+
                                    mkdtd(nh::server::stat::uploaded()/1024,nh::server::stat::downloaded()/1024,
-                                         "UL: "+content.from_int(nh::server::stat::uploaded()/1024.f)+" kb",
-                                         "DL: "+content.from_int(nh::server::stat::downloaded()/1024.f)+" kb",
-                                         "11aa11","aa1111")+"<br/>Hourly max:"+content.from_int(mxt/1024)+" kb<br/>"+diag+"<br/>");
+                                         "UL: "+content.str_from_int(nh::server::stat::uploaded()/1024.f)+" kb",
+                                         "DL: "+content.str_from_int(nh::server::stat::downloaded()/1024.f)+" kb",
+                                         "11aa11","aa1111")+"<br/>Hourly max:"+content.str_from_int(mxt/1024)+" kb<br/>"+diag+"<br/>");
                 }
                 else
                 {
                     content.change("[[transfer_usage]]","<br/><b>Transfer used:</b> "+
                                    mkdtd(nh::server::stat::uploaded(),nh::server::stat::downloaded(),
-                                         "UL: "+content.from_int(nh::server::stat::uploaded()/1024)+" kb",
-                                         "DL: "+content.from_int(nh::server::stat::downloaded()/1024)+" kb",
+                                         "UL: "+content.str_from_int(nh::server::stat::uploaded()/1024)+" kb",
+                                         "DL: "+content.str_from_int(nh::server::stat::downloaded()/1024)+" kb",
                                          "11aa11","aa1111")+"<br/>");
                 }
             }
             else content.remove("[[transfer_usage]]");
 
-            content.change("[[general_usage]]","<br/><b>Recived Connections: </b> <code>"+content.from_int(nh::server::stat::connections())+"</code>");
+            content.change("[[general_usage]]","<br/><b>Recived Connections: </b> <code>"+content.str_from_int(nh::server::stat::connections())+"</code>");
             if(nh::server::stat::hit_stats())
             {
                 unsigned long mxt=1;
@@ -163,22 +163,22 @@ extern "C"
                 long long olh=(nh::server::stat::hour_hits(0));
                 for(unsigned long i=0;i<4;i++)
                 {
-                    diag+="<line x1=\"0\" x2=\"100%\" y1=\""+nh::data::superstring::from_int((i+1)*20)+"%\" y2=\""+nh::data::superstring::from_int((i+1)*20)+"%\" style=\"stroke:rgb(50,50,50);stroke-width:0.5px\" />";
-                    diag+="<text x=\"90%\"  y=\""+nh::data::superstring::from_int((i+1)*20)+"%\"> "+nh::data::superstring::from_int((mxt/5)*(4-i))+"</text>";
+                    diag+="<line x1=\"0\" x2=\"100%\" y1=\""+nh::data::superstring::str_from_int((i+1)*20)+"%\" y2=\""+nh::data::superstring::str_from_int((i+1)*20)+"%\" style=\"stroke:rgb(50,50,50);stroke-width:0.5px\" />";
+                    diag+="<text x=\"90%\"  y=\""+nh::data::superstring::str_from_int((i+1)*20)+"%\"> "+nh::data::superstring::str_from_int((mxt/5)*(4-i))+"</text>";
                 }
                 for(unsigned long i=1;i<nh::server::stat::hourly_length();i++)
                 {
-                    diag+="<line x1=\""+content.from_int(((i-1)*100)/nh::server::stat::hourly_length())+\
-                        "%\" y1=\""+content.from_int(100-((olh*100)/mxt))+\
-                        "%\" x2=\""+content.from_int(((i)*100)/nh::server::stat::hourly_length())+\
-                        "%\" y2=\""+content.from_int(100-(((nh::server::stat::hour_hits(i))*100)/mxt))+\
+                    diag+="<line x1=\""+content.str_from_int(((i-1)*100)/nh::server::stat::hourly_length())+\
+                        "%\" y1=\""+content.str_from_int(100-((olh*100)/mxt))+\
+                        "%\" x2=\""+content.str_from_int(((i)*100)/nh::server::stat::hourly_length())+\
+                        "%\" y2=\""+content.str_from_int(100-(((nh::server::stat::hour_hits(i))*100)/mxt))+\
                         "%\" style=\"stroke:rgb(187,17,17);stroke-width:1\" />";
                     olh=(nh::server::stat::hour_hits(i));
                 }
 
                 diag+="</svg>";
 
-                content.change("[[hits]]","<br/><b>Total requests: </b> <code>"+content.from_int(nh::server::stat::hits())+"</code><br/><b>Hourly peak: </b><code>"+content.from_int(mxt)+"</code><br/>"+diag+"<br/>");
+                content.change("[[hits]]","<br/><b>Total requests: </b> <code>"+content.str_from_int(nh::server::stat::hits())+"</code><br/><b>Hourly peak: </b><code>"+content.str_from_int(mxt)+"</code><br/>"+diag+"<br/>");
             }
             else content.remove("[[hits]]");
 
@@ -186,8 +186,8 @@ extern "C"
             {
                 content.change("[[methods]]","<br/><b>Request types:</b> "+
                                mkdtd(nh::server::stat::get_requests(),nh::server::stat::post_requests(),
-                                     "GET: "+content.from_int(nh::server::stat::get_requests()),
-                                     "POST: "+content.from_int(nh::server::stat::post_requests()),
+                                     "GET: "+content.str_from_int(nh::server::stat::get_requests()),
+                                     "POST: "+content.str_from_int(nh::server::stat::post_requests()),
                                      "11aa11","aa1111")+"<br/>");
             }
             else content.remove("[[methods]]");
