@@ -26,7 +26,7 @@ freely, subject to the following restrictions:
 #define SSLOCK if(lck)pos=lpos
 
 
-string nativehttp::data::superstring::from_int(int in)
+string nativehttp::data::superstring::str_from_int(int in)
 {
 	string tmp, ret;
 	if(in < 0)
@@ -42,6 +42,27 @@ string nativehttp::data::superstring::from_int(int in)
 	while(in /= 10);
 	for(int i = tmp.size() - 1; i >= 0; i--)
 		ret += tmp[i];
+
+	return ret;
+}
+
+nativehttp::data::superstring nativehttp::data::superstring::sst_from_int(int in)
+{
+	string tmp;
+	nativehttp::data::superstring ret;
+	if(in < 0)
+	{
+		ret.str = "-";
+		in = -in;
+	}
+	do
+	{
+		tmp += in % 10 + 48;
+		in -= in % 10;
+	}
+	while(in /= 10);
+	for(int i = tmp.size() - 1; i >= 0; i--)
+		ret.str += tmp[i];
 
 	return ret;
 }
