@@ -1,9 +1,10 @@
 NativeHTTP By magik6000
-for more info visit eleinfo.cba.pl
+For more info visit eleinfo.cba.pl
 
 DEV:
 -Special macros for returning OnLoad status
 -Scales on diagrams in NativeStat
+-Added few SuperString functions - RE-NAMED SOME OLD!
 -Fixed connections stats
 
 1005.13:
